fix z-index internal header

--- a/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/_internal-header.scss
+++ b/menarini-master-template/ui.frontend/src/main/webpack/mastertemplate/components/_internal-header.scss
@@ -28,6 +28,7 @@
 		font-family: $font-family-oswald;
 		font-weight: $font-extra-light;
 		margin-bottom: 50px;
+		z-index: 10;
 	}
 	.cmp-teaser__image{
 		height: 100%;
